# color-schemes

./: Cargo.toml
src/: encodings.rs  errors.rs  lib.rs  nalgebra_helpers.rs  utils.rs
src/colors/: cieluv.rs  ciexyy.rs  ciexyz.rs  color.rs  display_p3.rs  mod.rs  srgb.rs  utils.rs
tests/: integration_tests.rs
