[package]
name = "color-schemes"
version = "0.1.0"
authors = ["Richard Xia <richardxia@richardxia.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.19.0"

[dev-dependencies]
rand = "0.7.2"
rand_chacha = "0.2.1"
